--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -34,10 +34,10 @@ students %>%
 
 Вспомним, что популяционные и выборочные оценки пишутся специально по-разному, чтобы не запутаться, о выборке или генеральной совокупности идет речь:
 
-.        | Генеральная совокупность | Выборка 
--------- | ------------------------ | ------- 
-Среднее  |               $\mu$    |    M, $\overline X$   
-Стандартное отклонение | 	$\sigma$|  s, sd 
+|                                   | Генеральная совокупность | Выборка |
+|:---------------------------------:|:------------------------:|:-------:|
+| Среднее (математическое ожидание) |         $\mu$            |M, $\overline X$|
+|       Стандартное отклонение      |          $\sigma$        |   s, sd |
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
@@ -103,18 +103,20 @@ kable(students[1:10,]) %>% scroll_box(width = "100%")
 
 Для того, чтобы ответить на вопрос, есть ли статистически значимые различия, нужно проверить гипотезу о различиях по алгоритму **NHST (null hypothesis statistical testing)**
 
-## NHST: алгоритм проверки гипотезы и анализа данных
+## NHST: алгоритм проверки гипотезы и анализа данных {#nhst}
 
-1. Формулируем **эмпирическую гипотезу** (гипотеза на языке возможностей того исследования, которое будет проводиться), выделить **зависимую и независимую переменные** и характер исследуемой связи между ними. Понимаем, как будут выглядеть собранные данные.
+1. Формулируем **эмпирическую гипотезу** (гипотеза на языке возможностей того исследования, которое будет проводиться), выделяем **зависимую и независимую переменные** и характер исследуемой связи между ними. Понимаем, как будут выглядеть собранные данные.
 2. Формулируем **нулевую** $H_0$  (об отсутствии и различий или связи) и **альтернативную** $H_1$ (о наличии различий или связи) **гипотезы**
 3. Выбираем условия, при котором будем рассчитывать статистический критерий -- **уровень значимости** $\alpha$ (вероятность ложноположительного вывода, чаще всего α=0.05) и **статистическую мощность** $power = 1-\beta$ (вероятность обнаружить эффект, если он есть, чаще всего power=0.8).
 4. Выбираем **статистический критерий** проверки гипотезы (например, t-test, Манна-Уитни тест, ANOVA, тест Краскела-Уоллиса, корреляционный тест, линейная регрессия и т.д.).
 5. На основании α, power и размера эффекта предыдущих исследований для выбранного статистического критерия рассчитываем **размер необходимой выборки**.
+
 -- *собираем данные* --
+
 6. Выбираем среду анализа данных, предобработываем данные.
 7. Для выбранных переменных по отдельности считаем **описательные статистики**, переменные визуализируем с помощью гистограммы (histogram) или столбчатой диаграммы (barplot) или графика плотности вероятности (density plot).
 9. Проводим расчет **статистического критерия**: рассчитываем ключевую статистику (t-значение, F-значение, R т.д) и p-value, считаем размер эффекта (Cohen’s d, eta squared и тд).
-10. **Делаем выводы и нтерпретируем статистики**, полученные в ходе статистического теста: сравниваем полученное p-value с выбранным уровнем $\alpha$, если p-value < $\alpha$ -- считаем, что у нас достаточно доказательств, чтобы отвергнуть нулевую гипотезу $H_0$, и принимаем решение о верности альтернативной гипотезы $H_1$.
+10. **Делаем выводы и интерпретируем статистики**, полученные в ходе статистического теста: сравниваем полученное p-value с выбранным уровнем $\alpha$, если p-value < $\alpha$ -- считаем, что у нас достаточно доказательств, чтобы отвергнуть нулевую гипотезу $H_0$, и принимаем решение о верности альтернативной гипотезы $H_1$.
 11. Делаем **вывод относительно эмпирической гипотезы**.
 12. **Визуализируем данные** иллюстрирующим результаты графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
 
@@ -132,9 +134,7 @@ knitr::include_graphics("docs/images/hypothesis.png")
 ```
 </p>
 
-### Эмпирические методы
-
-Разберем несколько примеров
+Разберем несколько примеров. Какие методы можно применить для исследования этих вопросов?
 
 Ситуация 1
 
@@ -142,16 +142,22 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 Ситуация 2
 
-> Предположим, что перед выборам в государственную думу группа социологов проводит опрос общественного мнения с целью выявления предпочтений к кандидатам. Для этого операторы колл-центра обзванивали телефонные номера, выбранные случайным образом из справочника телефонов Москвы, по принципу "каждый десятый номер". Обзвон продолжался в течение недели в рабочее время операторов колл-центра с 10 до 18.
+> Предположим, что перед выборам в государственную думу группа социологов проводит опрос общественного мнения с целью выявления предпочтений к кандидатам. Для этого операторы колл-центра обзванивали телефонные номера, выбранные случайным образом из справочника телефонов Москвы, по принципу "каждый десятый номер". Обзвон продолжался в течение недели в рабочее время операторов колл-центра с 10 до 18. Какие методы используются в таком исследовании? Что можно про них сказать, есть ли у них недостатки?
 
-И вернемся к нашей ситуации
+<div>
+<details>
+<summary>*Методы*</summary>
+
+</details>
+</div>
+
+И вернемся к нашей ситуации с данными на португальских студентах.
 
 > Допустим, мы исследовали семьи с подростками в крупных (GP school) и небольших городах (MS school) и на нашей выборке посчитали, что в крупных городах родители проводят со своими детьми в среднем 14 часов, а в небольших городах -- 15 часов в неделю (из данных задания на доверительный интвервал). 
 1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
 3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
 
-Метод, который здесь используется -- это квази-эксперимент или корреляционное исследование (так как мы не можем взять одинаковые семьи и одним сказать "проводите по 15 часов с детьми", а другим -- "проводите по 14 часов с детьми", у нас уже есть эти группы, мы не проводим манипуляции сами).
-
+Метод, который здесь используется -- это корреляционное исследование. Если бы в этом исследовании с разными школами проводились еще какие-либо манипуляции -- это был бы квази-эксперимент (так как мы не можем взять одинаковые семьи и одним сказать "проводите по 15 часов с детьми", а другим -- "проводите по 14 часов с детьми", у нас уже есть эти группы, мы не проводим манипуляции сами).
 
 
 Эмпирическая гипотеза 1 может звучать так: `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах`
@@ -170,29 +176,31 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 ### Уровни НП в категориальных переменных
 
-Об уровнях в НП говорят в категориальных -- порядковых или номинативных -- переменных. Например, условия "часто" и "редко", условия "обеспеченная семья" или "не обеспеченная". В примерах выше для гипотезы `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах` мы собираемся сравнить две группы, и здесь можно говорить об уровнях НП `город` -- `крупный город` и `небольшой город`. 
+Об уровнях в независимой переменной (НП) говорят в категориальных -- порядковых или номинативных -- переменных. Это перечень возможных значений, которые может принимать категориальная НП. Например, условия "часто" и "редко", условия "обеспеченная семья" или "не обеспеченная". В примерах выше для гипотезы `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах` мы собираемся сравнить две группы, и здесь можно говорить об уровнях НП `город` -- `крупный город` и `небольшой город`. 
 
 
 Для гипотезы 1
 
-$ Школа \sim {среднее время с детьми / неделю}$
+Мы преполагаем, что среднее время, проведенное родителями с детьми в неделю, коррелирует с школой, то есть среднее время будет различаться в разных школах:
 
-ЗП -- время с детьми, количественная непрерывная -- шкала отношений
-НП -- школа в городе (крупном / небольшом), категориальная
+<p align="center">$ Time \sim School$</p>
+
+* ЗП -- среднее время, проведенное родителями с детьми в неделю, количественная непрерывная -- шкала отношений
+* НП -- школа в городе (крупном / небольшом) -- категориальная номинативная
 
 Для гипотезы 2
 
-$famrel \sim Walc$
+<p align="center">$Walc \sim famrel $</p>
 
-ЗП -- ?
-НП -- ?
+* ЗП -- Walc, количество алгоголя, выпиваемое студентами на выходных, выраженное опросником со шкалой от 1 до 5. ЗП -- порядковая шкала.
+* НП -- famrel, оценка, насколько поддерживающие отношения в семье, выраженнае опросником со шкалой от 1 до 5. НП -- порядковая шкала.
 
 Для гипотезы 3
 
-$ \sim $
+<p align="center">$ ?? \sim ?? $</p>
 
-ЗП -- ?
-НП -- ?
+* ЗП -- ?
+* НП -- ?
 
 В зависимости от того, какие выводы мы хотим сделать, нам можем потребоваться разное количество уровней в данных. Сравните гипотезы: `Студенты, кто оценивает отношения с родителями как менее поддерживающие (переменная famrel, менее поддерживающие в значениях 1-2), чаще употребляют алкоголь (переменная Walc, употребление в выходные дни, значения 4-5)` и `Чем ниже студенты оценивают отношения с родителями (переменная famrel), тем чаще они употребляют алкоголь в выходные дни (переменная Walc)`. Чем они отличаются?
 
@@ -245,18 +253,31 @@ $ \sim $
 
 ## Нулевая и альтернативные статистические гипотезы
 
-Для того, чтобы провести статистический тест, нужно определить еще **статистическую гипотезу** – тестируемое утверждение об отсутствии различий между группами (если гипотеза подразумевает сравнение групп) или об отсутствии связи между переменнами (если гипотеза про связь количественных непрерывных переменных). 
+Для того, чтобы провести статистический тест, нужно определить еще **статистические гипотезы** – искусственно введенные тестируемые утверждения относительно генеральной совокупности.Они вводят как раз для того, чтобы иметь возможность как-то посчитать данные и статистически сделать вывод на их основании о генеральной совокупности по нашей маленькой выборке. Статистических гипотез две, они взаимо противоположны: нулевая (основная) и альтернативная гипотезы.
 
-Нулевая и альтернативные гипотезы -- вспомогательные гипотезы, чисто статистические, для того, чтобы проверить нашу эмпирическую гипотезу.
+**Нулевая (основная) гипотеза** $H_0$ -- это всегда гипотеза об отсутствии различий в генеральной совокупности. Гипотеза об отсутствии различий между группами (если гипотеза подразумевает сравнение групп) или об отсутствии связи между переменнами (если гипотеза про связь количественных непрерывных переменных). Ее мы пытаемся опровергнуть в статистическом тестировании (да, именно опровергнуть, а не подтвердить – выводы, которые мы можем сделать отноосительно нулевой гипотезы – только отвергнуть или не отвергнуть, не можем подтвердить ее и принять).
 
-**Нулевая (основная) гипотеза** $H_0$ -- это всегда гипотеза об отсутствии различий в генеральной совокупности. мы пытаемся опровергнуть в статистическом тестировании (да, именно опровергнуть, а не подтвердить – выводы, которые мы можем сделать отноосительно нулевой гипотезы – только отвергнуть или не отвергнуть, не можем подтвердить ее и принять).
 **Альтернативная гипотеза** $H_1$ -- гипотеза, противоположная к $H_0$, то есть гипотеза о наличии различий в генеральной совокупности. $P(H_0) + P(H_1) = 1$
 
-Какие $H_0$ и $H_1$ для гипотез? 
+Какие $H_0$ и $H_1$ для наших гипотез?
 
-`1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах?`
-`2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? `
-`3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?`
+Для гипотезы 1
+
+<p align="center">$ Time \sim School$</p>
+
+Для гипотезы 2
+
+<p align="center">$Walc \sim famrel $</p>
+
+* ЗП -- Walc, количество алгоголя, выпиваемое студентами на выходных, выраженное опросником со шкалой от 1 до 5. ЗП -- порядковая шкала.
+* НП -- famrel, оценка, насколько поддерживающие отношения в семье, выраженнае опросником со шкалой от 1 до 5. НП -- порядковая шкала.
+
+Для гипотезы 3
+
+<p align="center">$ ?? \sim ?? $</p>
+
+* ЗП -- ?
+* НП -- ?
 
 ### Направленные и ненаправленные гипотезы
 
@@ -300,7 +321,7 @@ knitr::include_graphics("docs/images/errors.jpg")
 Как понять, какой тест выбрать? Это, наверное, один из самых сложных вопросов в статистике. На него влияет большое количество нюансов, мы рассмотрим их в [следующем разделе](#stats_criteria)
 
 
-## Размер выборки (#sample_size)
+## Размер выборки {#sample_size}
 
 **Расчет размера выборки** -- важнейший этап, потому что именно он отвечает за нивелирование ошибки второго рода, сделать ложноотрицательный вывод. Вполне может оказаться так, что из-за маленькой выборки мы просто не смогли зафиксировать различия, которые на самом деле есть в генеральной совокупности! 
 
@@ -308,27 +329,36 @@ knitr::include_graphics("docs/images/errors.jpg")
 
 Чтобы посчитать необходимую выборку, нужно знать примерный размер эффекта, который мы можем обнаружить, уровень значимости $\alpha$, и статистическую мощность.
 
-**Размер эффекта** -- это величина наблюдаемых различий. За степень различий отвечает не полученная статистика после примененного статистического критерия (например, t-значение, F-значение), и не p-значение, а отдельная метрика. Эта метрика расчитывается по формулам индивидуально для каждого статистического теста. Например, для t-test размер эффекта -- это $Cohen's d$ или его нормализованная версия $Hedges` g$. Исключение составляет только коэффициент корреляции $r$ -- он как раз будет являться и статистикой, и величиной эффекта. Для линейной регрессии с одинм предиктором размером эффекта может также являться $R^2$, а для множественной, когда много предикторов, лучше уже использовать метрику $Cohen’s f^2$ В психологических исследованиях размер эффекта редко бывает большим. И чем меньше ожидаемый размер эффекта, тем больше наблюдений нам надо собрать для возможности сделать точный вывод о наличи или отсутствии различий в генеральной совокупности.
+**Размер эффекта** -- это величина наблюдаемых различий. *За степень различий отвечает не полученная статистика после примененного статистического критерия (например, t-значение, F-значение), и не p-значение, а отдельная метрика*. Эта метрика расчитывается по формулам индивидуально для каждого статистического теста. Например, для t-test размер эффекта -- это $Cohen's \ d$ или его нормализованная версия $Hedges`\  g$ (на практике используется реже). Исключение составляет только коэффициент корреляции $r$ -- он как раз будет являться и статистикой, и величиной эффекта. Для линейной регрессии с одинм предиктором (фактором, он же независимая переменная) размером эффекта может также являться $R^2$, а для множественной, когда много предикторов (факторов или НП), лучше уже использовать метрику $Cohen’s \ f^2$ или $partial \ \eta^2 2$ В психологических исследованиях, если они не затрагивают психофизиологию, размер эффекта редко бывает большим -- обычно он полоучается в районе маленького или среднего. И чем меньше ожидаемый размер эффекта, тем больше наблюдений нам надо собрать для возможности сделать точный вывод о наличи или отсутствии различий в генеральной совокупности!
 
 Есть хорошая визуализация размера эффекта дла t-test *Cohen's d*  https://rpsychologist.com/d3/cohend/
 
-Размер эффекта обычно участвует в тестировании гипотез на двух стадиях:
+Размер эффекта обычно участвует в тестировании гипотез на двух стадиях [этого алгоритма](#nhst):
 
-1. Для расчета размера выборки на этапе планировании исследования --  в этом случае используется размер эффекта из аналогичных уже проведенных исследований для того, чтобы примерно оценить возможности поймать популяционный эффект на нашей выборке и набрать нужное количество.
-2. Во время интерпретации проведенного статистического теста на данных. Размер эффекта -- одна из ключевых цифр для понимания результатов статистических тестов.
+1. Для расчета размера выборки на этапе планировании исследования --  в этом случае используется размер эффекта из аналогичных уже проведенных исследований для того, чтобы примерно оценить возможности поймать популяционный эффект на нашей выборке и набрать нужное количество (шаг 5 [этого алгоритма](#nhst)).
+2. Во время интерпретации проведенного статистического теста на данных. Размер эффекта -- одна из ключевых цифр для понимания результатов статистических тестов (шаг 10 [этого алгоритма](#nhst)).
 
-Если в статьях, на которые вы опираетесь при планировании исследования, не указан размер эффекта, его можно посчитать самостоятельно.
+Если в статьях, на которые вы опираетесь при планировании исследования, не указан размер эффекта, его можно посчитать самостоятельно на основании указанных в статьях данных: размера выборки в исследовании, принятого уровня статстической мощности (если не указан, то берется обычно за 0.8) и выбранного уровня статистической значимости $\alpha$(если не указан, то берется обычно за 0.5).
 
-Разделение размеров эффекта https://imaging.mrc-cbu.cam.ac.uk/statswiki/FAQ/effectSize 
+Табличка с метриками размеров эффектаинтерпретацией по их величинам на сайте Cambridge University и  https://imaging.mrc-cbu.cam.ac.uk/statswiki/FAQ/effectSize 
 
-Стат критерий | Метрика размера эффекта | Маленький эффект | Средний эффект | Сильный эффект 
-------------- | ----------------------- | ---------------- | -------------- | -------------
-t-test | $Cohen's d, Hedges' g$ | 0.2 | 0.5 | 0.8
-ANOVA | $\eta^2, \omega^2$ | 0.01 | 0.06 | 0.14
+|            Стат критерий            | Метрика размера эффекта | Маленький эффект | Средний эффект | Сильный эффект |
+|:-----------------------------------:|:-----------------------:|:----------------:|:--------------:|:--------------:|
+|                t-test               |$Cohen's \ d, Hedges' \ g$|        0.2       |       0.5      |       0.8      |
+|                ANOVA                | $\eta^2, \omega^2$      |       0.01       |      0.06      |      0.14      |
+|                ANOVA                |     $Cohen' \ f$        |        0.1       |      0.25      |       0.4      |
+|   линейная регрессия (один фактор)  |     $Cohen' \ f$        |        0.1       |      0.25      |       0.4      |
+| линейная регрессия (много факторов) |  $partial \ \eta^2$     |       0.02       |      0.13      |      0.26      |
+| линейная регрессия (много факторов) |     $Cohen' \ f$        |       0.14       |      0.39      |      0.59      |
+
 
 "Calculating and reporting effect sizes to facilitate cumulative science: a practical primer for t-tests and ANOVAs" https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00863/full 
 
-**Размер эффекта, уровень значимости $\alpha$, статистическая мощность и размер выборки -- связанные параметры. Зная 3 их них, всегда можно вычислить четвертый!** 
+**Размер эффекта, уровень значимости $\alpha$, статистическая мощность и размер выборки -- связанные параметры. Зная 3 их них, всегда можно вычислить четвертый!** https://rpsychologist.com/d3/nhst/ 
+
+Сделать это можно в G*Power https://www.psychologie.hhu.de/arbeitsgruppen/allgemeine-psychologie-und-arbeitspsychologie/gpower или в R, например, с помощью пакета `pwr` https://cran.r-project.org/web/packages/pwr/pwr.pdf.
+
+Допустим, мы решили проверять гипотезу о том, что студенты, чьи родители получили магистерское образование, учатся лучше, чем те, чьи родители закончили колледж. Выбрали уровень статистической значимости $\alpha = 0.05$, с которым будем сравнивать p-values, которые получим. Выбрали уровень статистической мощности $power = 0.8$ (то есть ошибка второго рода $\beta = 0.2$). Выбрали, что будем проверять эти гипотезу с помощью t-test. Из предыдущего похожего исследования узнали, что размер эффекта в аналогичном исследовании был равен Cohen's d = 0.37. И теперь можем оценить, сколько данных нам нужно набрать, чтобы если различие между такими студентами было в генеральной совокупности, мы смогли обнаружить его на наших данных. Эти 4 величины связаны между собой математически, поэтому зная 3 любых, мы можем вычислить четвертую. 
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
@@ -336,14 +366,8 @@ knitr::include_graphics("docs/images/power_samplesize.jpg")
 ```
 </p>
 
-Куда будут попадать выборочные средние при справедливости альтернативной гипотезы?
-https://rpsychologist.com/d3/nhst/
 
 Underpowered studies -- огромнная проблема многих наук. "Power failure: why small sample size undermines the reliability of neuroscience" https://www.nature.com/articles/nrn3475
-
-Зная статистическую мощность, уровень значимости и размер эффекта -- размер выборки можно рассчитать в Gpower https://www.psychologie.hhu.de/arbeitsgruppen/allgemeine-psychologie-und-arbeitspsychologie/gpower или в R, например, с помощью пакета `pwr` https://cran.r-project.org/web/packages/pwr/pwr.pdf. Рассчитаем вторым способом.
-
-Допустим, мы решили проверять гипотезу о том, что студенты, чьи родители получили магистерское образование, учатся лучше, чем те, чьи родители закончили колледж. Выбрали уровень статистической значимости $\alpha = 0.05$, с которым будем сравнивать p-values, которые получим. Выбрали уровень статистической мощности $power = 0.8$ (то есть ошибка второго рода $\beta = 0.2$). Выбрали, что будем проверять эти гипотезу с помощью t-test. Из предыдущего похожего исследования узнали, что размер эффекта в аналогичном исследовании был равен Cohen's d = 0.37. И теперь можем оценить, сколько данных нам нужно набрать, чтобы если различие между такими студентами было в генеральной совокупности, мы смогли обнаружить его на наших данных. Эти 4 величины связаны между собой математически, поэтому зная 3 любых, мы можем вычислить четвертую. https://rpsychologist.com/d3/nhst/ 
 
 ```{r}
 library(pwr)
@@ -367,7 +391,7 @@ knitr::include_graphics("docs/images/pvalue_dist_2.png")
 
 Для того, чтобы детально поразбираться в нюансах размера эффекта и выборки, можно пройти курс Лакенса https://www.coursera.org/learn/statistical-inferences (кажется, теперь только с vpn)
 
-## Расчет статического критерия и проверка значимости (#stat_test_example)
+## Расчет статического критерия и проверка значимости {#stat_test_example}
 
 Вернемся снова к нашим вопросам.
 
@@ -433,6 +457,5 @@ $p-value = 0.04 < \alpha = 0.05$.
 Величина p-value связана [мы уже обсуждали это выше](#sample_size):
 
 * Размером выборки: чем больше объем выборки, тем больше статистическая мощность и тем чаще и увереннее будут появляться p-value < 0.05
-* Размером эффекта: чем больше размер эффекта, тем ниже будет p-value 
 * Дисперсией: чем меньше дисперсия и чем более однородные данный, тем ниже будет p-value
 
