--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -174,11 +174,6 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 При описании ЗП и НП важно указать, к какой шкале они относятся? Это важно понимать, чтобы потом выбрать, как анализировать данные.
 
-### Уровни НП в категориальных переменных
-
-Об уровнях в независимой переменной (НП) говорят в категориальных -- порядковых или номинативных -- переменных. Это перечень возможных значений, которые может принимать категориальная НП. Например, условия "часто" и "редко", условия "обеспеченная семья" или "не обеспеченная". В примерах выше для гипотезы `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах` мы собираемся сравнить две группы, и здесь можно говорить об уровнях НП `город` -- `крупный город` и `небольшой город`. 
-
-
 Для гипотезы 1
 
 Мы преполагаем, что среднее время, проведенное родителями с детьми в неделю, коррелирует с школой, то есть среднее время будет различаться в разных школах:
@@ -201,6 +196,10 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 * ЗП -- ?
 * НП -- ?
+
+### Уровни НП в категориальных переменных
+
+Об уровнях в независимой переменной (НП) говорят в категориальных -- порядковых или номинативных -- переменных. Это перечень возможных значений, которые может принимать категориальная НП. Например, условия "часто" и "редко", условия "обеспеченная семья" или "не обеспеченная". В примерах выше для гипотезы `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах` мы собираемся сравнить две группы, и здесь можно говорить об уровнях НП `город` -- `крупный город` и `небольшой город`. 
 
 В зависимости от того, какие выводы мы хотим сделать, нам можем потребоваться разное количество уровней в данных. Сравните гипотезы: `Студенты, кто оценивает отношения с родителями как менее поддерживающие (переменная famrel, менее поддерживающие в значениях 1-2), чаще употребляют алкоголь (переменная Walc, употребление в выходные дни, значения 4-5)` и `Чем ниже студенты оценивают отношения с родителями (переменная famrel), тем чаще они употребляют алкоголь в выходные дни (переменная Walc)`. Чем они отличаются?
 
@@ -263,18 +262,24 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 Для гипотезы 1
 
-<p align="center">$ Time \sim School$</p>
+<p align="center">
+$Time \sim School$
+</p>
 
 Для гипотезы 2
 
-<p align="center">$Walc \sim famrel $</p>
+<p align="center">
+$Walc \sim famrel$
+</p>
 
 * ЗП -- Walc, количество алгоголя, выпиваемое студентами на выходных, выраженное опросником со шкалой от 1 до 5. ЗП -- порядковая шкала.
 * НП -- famrel, оценка, насколько поддерживающие отношения в семье, выраженнае опросником со шкалой от 1 до 5. НП -- порядковая шкала.
 
 Для гипотезы 3
 
-<p align="center">$ ?? \sim ?? $</p>
+<p align="center">
+$?? \sim ??$
+</p>
 
 * ЗП -- ?
 * НП -- ?
@@ -404,8 +409,11 @@ knitr::include_graphics("docs/images/pvalue_dist_2.png")
 $\mu$ = 14, M = 15, n = 100, sd = 4.5
 
 Сформулириуем нулевую и альтернативные гипотезы. Нулевая гипотеза -- всегда гипотеза об отсутствии различий, то есть, что среднее время, которое проводят родители с детьми в неделю, не отличается в больших и маленьких городах.
-$H_0$: $\mu_{большие} = \mu_{маленькие}$ 
-$H_1$: $\mu_{большие} \neq \mu_{маленькие}$ 
+
+<p align="center"> $H_0$: $\mu_{большие} = \mu_{маленькие}$ </p>
+<p align="center"> $H_1$: $\mu_{большие} \neq \mu_{маленькие}$ </p>
+
+Еще один важный момент -- выбираем уровень значимости, граничное значения, при пересечении которого будем принимать решение о том, что можем отвергнуть нулевую гипотезу. Обычно $\alpha = 0.05$
 
 Далее мы начинаем проверять наше нулевое предположение, будем пытаться опровергнуть нулевую гипотезу.
 
@@ -440,22 +448,52 @@ knitr::include_graphics("docs/images/z_dist.png")
 
 Мы знаем, что числу 2 на распределении Z-оценок соответствует примерно 96% данных (мы знаем распределение данных для любого нормального распределения). И вспомним, что мы строили это распределение исходя из предположения равенства нулевой гипотезы, что $\mu_{большие} = \mu_{маленькие}$. Как тогда мы можем проинтерпретировать полученные оценки?
 
-Получилось, что вероятность получить значение $\mu_{маленькие} = 15 $ или еще более далекое от от $\mu_{большие}= 14$  при верности предположения что $\mu_{большие} = \mu_{маленькие}$ составляет $P(M_{маленькие} | \mu_{большие} = \mu_{маленькие}) = 1 - 0.96 = 0.04$. **Это и есть наше p-value**, целевая статистика, которую мы стремимся получить.
+Получилось, что вероятность получить значение $\mu_{маленькие} = 15$ или еще более далекое от от $\mu_{большие}= 14$  при верности предположения что $\mu_{большие} = \mu_{маленькие}$ составляет $P(M_{маленькие} | \mu_{большие} = \mu_{маленькие}) = 1 - 0.96 = 0.04$. **Это и есть наше p-value**, целевая статистика, которую мы стремимся получить.
+
+**P-value -- это вероятность (площадь графика под кривой) получить такие и еще более радикальные различия (уходящие в хвосты) при условии верности нулевой гипотезы (что на самом деле в генеральной совокупности различий нет, и этот результат мы получаем случайно).**
 
 В интерпретации p-value много путаницы, чтобы распутаться, можно почитать эти статьи:
 
 * Статья "A Dirty Dozen: Twelve P-Value Misconceptions" https://sixsigmadsi.com/wp-content/uploads/2020/10/A-Dirty-Dozen-Twelve-P-Value-Misconceptions.pdf
 
-* Неправильное использование p- значений -Misuse of p-values Неправильное использование <i>p-</i> значений - https://ru.abcdef.wiki/wiki/Misuse_of_p-values https://ru.abcdef.wiki/wiki/Misuse_of_p-values 
+* Неправильное использование p- значений -Misuse of p-values Неправильное использование <i>p-</i> значений - https://ru.abcdef.wiki/wiki/Misuse_of_p-values https://ru.abcdef.wiki/wiki/Misuse_of_p-values
 
 Далее, после того, как мы получили p-value, мы сравниваем это значение с нашим выбранным уровнем $\alpha$ -- допустимой нами вероятностью сделать ложноположительный вывод, допустить ошибку первого рода.
 
-$p-value = 0.04 < \alpha = 0.05$.
-
-В этом случае, если p-value получилось меньше альфы, то мы можем сказать, что **вероятность получить такие или еще более сильные различия между средними достаточно при условии верности нулевой гипотезы статистически значимо мала, поэтому мы можем отвергнуть нулевую гипотезу об отсутствии различий и принять альтернативную гипотезу о том, что различия есть**
+* Если $p \ value < \alpha$:
+    + расположение наших средних выглядит нетипичным для нулевой гипотезы -- мы предполагали средние в одной точки, а они разъехались довольно сильно
+    + считаем, что **вероятность получить такие или еще более сильные различия между средними при условии верности нулевой гипотезы статистически значимо мала**
+    + **поэтому можем отвергнуть нулевую гипотезу об отсутствии различий**
+    + **принимаем альтернативную гипотезу о том, что различия есть**
+    
+* Если $p \ value \ge \alpha$:
+    + расположение наших средних выглядит типичным для нулевой гипотезы -- средние разъехались недостаточно сильно, поэтому наши данные выгляд похоже на то, что нулевая гипотеза верна
+    + **не можем отвергнуть нулевую гипотезу** 
 
 Величина p-value связана [мы уже обсуждали это выше](#sample_size):
 
 * Размером выборки: чем больше объем выборки, тем больше статистическая мощность и тем чаще и увереннее будут появляться p-value < 0.05
 * Дисперсией: чем меньше дисперсия и чем более однородные данный, тем ниже будет p-value
+
+
+В нашем случае: $p-value = 0.04 < \alpha = 0.05$.
+
+В этом случае, так как p-value получилось меньше альфы, то мы можем сказать, что вероятность получить такие или еще более сильные различия между средними достаточно при условии верности нулевой гипотезы статистически значимо мала, поэтому мы можем отвергнуть нулевую гипотезу об отсутствии различий и принять альтернативную гипотезу о том, что различия между средними есть. То есть, мы протестировали статистчиескую гипотезу и пришли к выводу, что в генеральной совокупности $\mu_{большие}$ и $\mu_{маленькие}$ отличаются!
+
+
+Что мы сейчас сделали?
+
+* Выдвинули нулевую гипотезу об отсутствии различий между группами, которую будем опровергать -- то есть, что средние двух групп находятся в одной точке
+* Сформулировали противоположную ей альтернативую гипотезу
+* Зафиксировали, что будем тестировать нулевую гипотезу на уровне значимости $\alpha = 0.05$
+* Поместили первое среднее на распределении выборочных средних в середину и договорились оценивать фактическое (на данных) расположение второгоо среднего от него
+* Чтобы оценить, как далеко второе среднее от первого поолучилось на наших данных, перевели все в Z-оценки, посчитали Z-оценку для второго среднего.
+* На основании посчитанное Z-оценки расположили второе среднее на распределении выборочных средних, посчитали, какой процент данных лежит дальше этого значения (p-value)
+* Сравнили $p-value$ с $\alpha$: оно оказалось меньше 0.05, поэтому мы отвергли нулевую гипотезу об отсутствии различий и сделали вывод, что в генеральной совокупности средние отличаются.
+
+
+ 
+
+
+
 
