--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -168,7 +168,7 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 Давайте сначала подумаем, что это за гипотезы, какие зависимые и независимые переменные, наличие или отсутствие какой связи между зависимой и независимыми переменными нам хочется проверить?
 
-### Зависимые и независимые переменные
+### Зависимые и независимые переменные {#variables}
 
 **Независимые переменные** – это все, чем мы манипулируем по ходу проведения исследования, какие различия создаем с целью получить разный результат. **Зависимая** – целевая переменная, различия в которой как раз хотим получить путем манипуляции независимыми переменными, то, что мы измереяем. При описании исследования всегда важно записывать ЗП и НП, наряду с эмпирической (если метод это эксперимент, то экспериментальной) гипотезой. Эмпирическая гипотеза и переменные -- сердце нашего исследования, самое основное из языка, на котором описывается исследование, без понимания, что мы хгтим прооверить, чула не получится.
 
