--- a/08-stats_criteria.Rmd
+++ b/08-stats_criteria.Rmd
@@ -27,10 +27,10 @@ students %>%
 
 Статистический критерий включает:
 
-* Теоретическое распределение, на котором мы будем располагать сравниваемые средние: вид кривой и математическая формула этого вероятностного закона (Т-распределение, F-распределение, $\chi^2$-распределение и другие)
-* Формулу, по которому мы будем рассчитывать искомое значение критерия (как уже рассчитывали $Z_{Mмаленькие}$) исходя из наших данных на выборке)
-* Значения (таблицу значений, но мы не будем ими пользоваться, за нас все считают бесдушные машины), приводящее в соответствие каждой оценке (например, Z-значению или Т-значению) и процент данных, расположенных данных до этого значения на графике распределеня
-* Формулу для рассчета числа степеней свобооды для этого критерия
+* **Теоретическое распределение**, на графике плотности вероятности которого мы будем располагать сравниваемые средние: вид кривой и математическая формула этого вероятностного закона (Т-распределение, F-распределение, $\chi^2$-распределение и другие)
+* **Формулу**, по которой мы будем рассчитывать искомое **значение критерия** (как уже рассчитывали $Z_{Mмаленькие}$) исходя из наших данных на выборке для Z-оценки)
+* Cоответствие каждого посчитанного по этой формуле значения (например, Z-значения или Т-значения) проценту данных, расположенных за этим значением на графике плотности вероятности этого распределения (*мы не будем пользоваться такими таблицами соответствий, за нас все считают бесдушные машины*)
+* **Формулу для рассчета числа степеней свободы** для этого критерия
 
 ## Степени свободы
 
@@ -46,7 +46,7 @@ students %>%
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
-knitr::include_graphics("docs/images/z_dist.png")
+knitr::include_graphics("docs/images/z-dist_2.png")
 ```
 
 
@@ -107,7 +107,7 @@ knitr::include_graphics("docs/images/chisq_dist.png")
 **Вопросы, которые влияют на выбор статистического теста:**
 
 1. Зависимая переменная: количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
-2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
+2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало -- [подробнее чуть ниже](#param_nonparam))*
 3. Сколько независимых переменных?
 4. НП количественные (интервальная и шкала отношений) или категориальные (номинативная и порядковая)?
 5. Если НП категориальные и мы сравниваем группы -- данные в группах зависимы или нет? Если нет, как сильно отличаются данные в группах, можем ли сказать, что дисперсия ЗП примерно одинакова в группах или нет? (*равенство дисперсий называется Homogeneity of Variance, проверяется с помощью Levene's test*)
@@ -124,7 +124,7 @@ knitr::include_graphics("docs/images/stats_cr_scheme.png")
 </p>
 
 
-### Параметрические и непараметрические критерии
+### Параметрические и непараметрические критерии {#param_nonparam}
 
 В списке вопросов, которые влияют на выбор статистического критерия, вторым пунктом идет вопрос о параметрике. Что это значит?
 
@@ -152,6 +152,10 @@ $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
 knitr::include_graphics("docs/images/parametric_assumptions.png")
 ```
 Графики из книжки Энди Филда "Discovering Statistics Using R"</p>
+
+Верхняя строка графиков показывает, как могут выглядить графики в случае близкого к норрмальному распределению: гистограмма или график плотности вероятности зависимой переменной похож на колоколообразную гауссиану, на QQ-плоте теоретические квартили почти соответствую фактическим на данных -- чем больше этот график похож на прямую линию y = x, тем лучше.
+
+Нижняя строка графиков показывает обратную историю, как могут выглядить визуализации распределения ЗП, которую мы НЕ будем считать нормально распределенной: график плотности и вероятности и гистограмма сильно скошенны влево, QQ-плот уже мало похож на прямую.
  
 ### Зависимые и независимые выборки
 
@@ -167,7 +171,7 @@ knitr::include_graphics("docs/images/samples.png")
 
 Первым из статистических критериев мы рассмотрим один из самых простых вариантов -- т-тест.
 
-Это статистический критерий, распределение которого относится к семейству Т-распределений -- очень похоже на нормальное, но с более приподнятыми хвостами. Используется для сравнения средних двух групп, измеренных в метрической (количественной) шкале. Для остальных шкал т-тест не подходит *(хотя признаки, измеренные по шкале Лайкерта, например, по шкале от 1 до 5, иногда могут приписываться к количественным ихмерениям, но в рамках этого курса мы не будем это затрагивать)*
+Это статистический критерий, распределение которого относится к семейству Т-распределений -- очень похоже на нормальное, но с более приподнятыми хвостами. Используется для сравнения средних двух групп, измеренных в метрической (количественной) шкале. Для остальных шкал т-тест не подходит *(хотя признаки, измеренные по шкале Лайкерта, например, по шкале от 1 до 5, иногда могут приписываться к количественным измерениям, но в рамках этого курса мы не будем это затрагивать)*
 
 Нулевая и альтернативная гипотезы:
 
@@ -176,32 +180,31 @@ knitr::include_graphics("docs/images/samples.png")
 <p align="center">$H_1$: $\mu_1 \neq \mu_2$ </p>
 
 
-Вернемся к данным про студентов и нашим вопросам
+Вернемся к данным про студентов и нашим вопросам и разберем теперь следующий вопрос:
 
-> Допустим, мы исследовали семьи с подростками в крупных (GP school) и небольших городах (MS school) и на нашей выборке посчитали, что в крупных городах родители проводят со своими детьми в среднем 14 часов, а в небольших городах -- 15 часов в неделю (из данных задания на доверительный интвервал). 
-1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
+> 
 3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
 
 ```{r eval=TRUE, echo = FALSE, message = FALSE}
 kable(students[1:10,]) %>% scroll_box(width = "100%") 
 ```
 
-Первый вопроос мы подробно разбирали в прошлый раз. Сейчас остановимся на третьем, который уже затрагивали.
+Мы уже [обсуждали в предыдущей главе](#variables), что ЗП здесь -- средний балл по математике (колонка `G_mat`), НП -- количество пропусков занятий по этом предмету (`absences_mat`). И ЗП, и НП -- количественные, закодированы в шкале отношений. Значит, можем пользоваться той веткой статистических тестов, которая подходит для количественных ЗП.
 
 Пройдем по алгоритму выбора статистического теста: <https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470>
 
-Помимо основных отраженных ответвлений, для каждого критерия существует ряд допущений.
+Помимо основных отраженных ответвлений, видим, что для каждого критерия существует ряд допущений.
 
-Допущения (assumptions) -- это утверждения про  характер наших данных, без соблюдения которых параметрические тесты будут работаьт некорректно (поэтому их никто и не любит).
+**Допущения (assumptions)** -- это утверждения про характер наших данных, без соблюдения которых параметрические тесты будут работать некорректно (поэтому их никто и не любит).
 
 ### Допущения для т-теста
 
-1. Данные распределены нормально (или, если измеряемый признак является случайной велиичной, в группах больше 30 наблюдений) 
-2. Дисперсии однородны (гомогенны) -- проверяется с помощью теста Ливеня.
+1. Данные распределены нормально (или, если измеряемый признак является случайной велиичной, в группах больше 30 наблюдений) -- обсуждали эту проверку [здесь](#param_nonparam)
+2. Дисперсии однородны (гомогенны) -- проверяется с помощью теста Ливеня (Homogeneity of Variance test, он же Levene's test).
 
 ### Непараметрические аналоги
 
-В случае, если допущения нормальности и однородноости дисперсий нарушаются, мы не можем использовать т-тест. 
+В случае, если допущения нормальности и однородности дисперсий нарушаются, мы не можем использовать т-тест. 
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
@@ -225,7 +228,6 @@ knitr::include_graphics("docs/images/scheme-t-tests.png")
 ```{r eval=TRUE, echo = FALSE, message = FALSE}
 students %>% 
   filter(absences_mat_groups == "less") %>% 
-  select(G_mat) %>% 
   summarise(mean = mean(G_mat), sd = sd(G_mat), n = length(G_mat))
 ```
 Средний балл в группах прогулищиков:
@@ -233,7 +235,6 @@ students %>%
 ```{r eval=TRUE, echo = FALSE, message = FALSE}
 students %>% 
   filter(absences_mat_groups == "more") %>% 
-  select(G_mat) %>% 
   summarise(mean = mean(G_mat), sd = sd(G_mat), n = length(G_mat))
 ```
 
@@ -265,10 +266,6 @@ students_2 %>%
 ```
 
 ## ANOVA (дисперсионный анализ)
-
-Хорошую главу (даже две) про ANOVA написал мой друг и коллега Антон Ангельгардт, почитайте для закрепления.
-https://angelgardt.github.io/SFDA2022/book/oneway-anova.html
-
 
 **ANOVA (ANalysis Of VAriance)** -- статистический критерий, распределение и ключевая статистика которого относятся к семейству F-распределений. Это то чуть скошенное влево распределение, уже сильно отличающееся от нормального. На этом распределении мы (точнее специально обученные программы) будут располагать F-значение, которое будет вычисляться (и это не имеет ничего общего с тем, как распределены переменные -- к ним все еще действует допущение о нормальности или большог ообъема выборки). Этот критерий используется, когда зависимая переменная (ЗП) измерена в метрической (количественной) шкале. Независимые переменные (НП) могут бытькатегориальными, но ЗП всегда количественная, иначе чуда не произойдет.
 
@@ -394,6 +391,8 @@ model_abs_mat_ez = ezANOVA(data = students, dv = G_mat, wid = student,
 model_abs_mat_ez
 ```
 
+Еще хорошую и более поробную главу (даже две) про ANOVA написал мой друг и коллега Антон Ангельгардт, если интересно углубиться, можно почитать его материал.
+https://angelgardt.github.io/SFDA2022/book/oneway-anova.html
 ```{r, eval=TRUE, message = FALSE, warning= FALSE}
 
 model_address_mat_ez = ezANOVA(data = students, dv = G_mat, wid = student,
